# Dacon_elec_0825

./: .dockerignore  .gitignore  Dockerfile  main.py  pycaret_submission_sorted.csv  pyproject.toml  todo.md
DATA/: baseline_submission.csv  building_info.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
open/: XGBoost를 활용한 전력사용량 예측.ipynb  baseline_submission.csv  sample_submission.csv  submission_1.csv  test.csv
open/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
open/catboost_info/learn/: events.out.tfevents
output/: pycaret_tuned_submission.csv
preprocess/: main.py  prep_tft.ipynb  pyproject.toml  time_expand.py
preprocess/dags/: pycaret_preprocessing_dag.py
pycaret_result/: main.py  pyproject.toml
pycaret_result/output/: pycaret_submission_sorted.csv  submission_1.csv  xgboost_tuned_submission.csv  xgboost_tuned_submission_aligned.csv
src/data_with_darts/: README.md  darts_building_as_cov.ipynb  darts_initial_test.ipynb  main.py  preprocess.py  pyproject.toml
src/pycaret_result/: align.py  main.py
src/pycaret_result/output/: blended_submission.csv  pycaret_tuned_submission.csv
