[project]
name = "data-with-darts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# 핵심 의존성들 (RTX 5070 Ti 지원을 위해 PyTorch nightly 사용)
dependencies = [
    "accelerate==0.28.0",
    "einops==0.7.0",
    "matplotlib>=3.8.0",
    "numpy<2.0.0",
    "pandas>=1.3.0",
    "scikit-learn==1.7.1",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "peft>=0.4.0",
    "transformers==4.31.0",
    "deepspeed==0.17.2",
    "sentencepiece==0.2.0",
    "mpi4py>=4.1.0",
    "mlflow>=3.1.4",
    "plotly>=6.2.0",
    "msgpack==1.1.1",
]

# RTX 5070 Ti 지원을 위한 PyTorch nightly 설정
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }
# triton은 PyTorch와 함께 nightly에서 가져오기
triton = { index = "pytorch-nightly" }
